--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-  "build": {
-    "directories": {
-      "output": "dist"
-    }
-  },
   "dependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
@@ -18,6 +13,7 @@
     "copy-webpack-plugin": "^5.1.1",
     "electron": "^8.2.5",
     "electron-builder": "^22.6.0",
+    "electron-builder-squirrel-windows": "^22.6.0",
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3",
@@ -30,7 +26,12 @@
     "build": "electron-builder build",
     "start": "electron .",
     "bundle": "webpack",
+    "release": "electron-builder build",
     "bundle-watch": "webpack --watch"
   },
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "author": {
+    "name": "myname",
+    "email": "myname@example.com"
+  }
 }
