--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "author": {
+    "email": "myname@example.com",
+    "name": "myname"
+  },
   "dependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
@@ -20,18 +24,15 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
+  "license": "MIT",
   "main": ".webpack/main/bundle.js",
   "name": "hello-electron",
   "scripts": {
     "build": "electron-builder build",
-    "start": "electron .",
     "bundle": "webpack",
+    "bundle-watch": "webpack --watch",
     "release": "electron-builder build",
-    "bundle-watch": "webpack --watch"
+    "start": "electron ."
   },
-  "version": "0.0.1",
-  "author": {
-    "name": "myname",
-    "email": "myname@example.com"
-  }
+  "version": "0.0.1"
 }
