--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
     "name": "myname"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "w3-css": "^4.1.0"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^5.0.0",
     "@types/node": "^13.13.4",
     "@types/webpack": "^4.41.12",
     "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.5.3",
     "electron": "^8.2.5",
     "electron-builder": "^22.6.0",
     "electron-builder-squirrel-windows": "^22.6.0",
+    "nodemon": "^2.0.4",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3",
@@ -30,7 +36,7 @@
   "scripts": {
     "build": "electron-builder build",
     "bundle": "webpack",
-    "bundle-watch": "webpack --watch",
+    "bundle-watch": "nodemon --watch webpack.config.ts --exec 'webpack --watch'",
     "release": "electron-builder build",
     "start": "electron ."
   },
