Fix build files setting

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -28,7 +28,8 @@ mac:
     # - mas
     - tar.gz
 files:
-  - .webpack/**/*
+  - '!**/*'
+  - '.webpack/**/*'
 icon: .webpack/main/icons/icon
 squirrelWindows:
   iconUrl: 'https://github.com/electron/electron/blob/master/default_app/icon.png'
