--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,35 +1,30 @@
 directories:
   output: dist
+files:
+  - '!**/*'
+  - .webpack/**/*
+icon: .webpack/main/icons/icon
 linux:
   category: Utility
   publish:
     provider: github
-  target: 
+  target:
     - AppImage
     - snap
     - rpm
     - deb
-win:
-  publish:
-    provider: github
-  target: 
-    - nsis
-    - portable
-    # - appx
-    - squirrel
-    # - msi
 mac:
   publish:
     provider: github
-  target: 
+  target:
     - zip
-    # - pkg
-    # - dmg
-    # - mas
     - tar.gz
-files:
-  - '!**/*'
-  - '.webpack/**/*'
-icon: .webpack/main/icons/icon
 squirrelWindows:
   iconUrl: 'https://github.com/electron/electron/blob/master/default_app/icon.png'
+win:
+  publish:
+    provider: github
+  target:
+    - nsis
+    - portable
+    - squirrel
