--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.9.8",
     "@types/react-dom": "^16.9.8",
     "@types/webpack": "^4.41.17",
+    "@types/webpack-merge": "^4.1.5",
     "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
     "electron": "^9.0.2",
@@ -31,7 +32,8 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   },
   "license": "MIT",
   "main": ".webpack/main/bundle.js",
@@ -39,7 +41,7 @@
   "scripts": {
     "build": "electron-builder build",
     "bundle": "webpack",
-    "bundle-watch": "nodemon --watch webpack.config.ts --exec 'webpack --watch'",
+    "bundle-watch": "nodemon --watch webpack.config.dev.ts --exec 'webpack --watch --config webpack.config.dev.ts'",
     "release": "electron-builder build",
     "start": "electron ."
   },
