--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electron-builder-squirrel-windows": "^22.7.0",
     "file-loader": "^6.0.0",
     "nodemon": "^2.0.4",
+    "prettier": "2.0.5",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
