--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@types/react-dom": "^16.9.8",
     "@types/webpack": "^4.41.17",
     "@types/webpack-merge": "^4.1.5",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
     "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
     "electron": "^9.0.2",
     "electron-builder": "^22.7.0",
     "electron-builder-squirrel-windows": "^22.7.0",
+    "eslint": "^7.2.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-plugin-import": "^2.21.1",
     "file-loader": "^6.0.0",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5",
