--- a/package.json
+++ b/package.json
@@ -1,56 +1,58 @@
 {
-  "author": {
-    "email": "myname@example.com",
-    "name": "myname"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.10.1",
-    "@material-ui/lab": "^4.0.0-alpha.55",
-    "electron-squirrel-startup": "^1.0.0",
-    "fontsource-roboto": "^2.1.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "rxjs": "^6.5.5"
-  },
-  "devDependencies": {
-    "@types/copy-webpack-plugin": "^6.0.0",
-    "@types/node": "^14.0.11",
-    "@types/react": "^16.9.8",
-    "@types/react-dom": "^16.9.8",
-    "@types/webpack": "^4.41.17",
-    "@types/webpack-merge": "^4.1.5",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "copy-webpack-plugin": "^6.0.2",
-    "css-loader": "^3.5.3",
-    "electron": "^9.0.2",
-    "electron-builder": "^22.7.0",
-    "electron-builder-squirrel-windows": "^22.7.0",
-    "eslint": "^7.2.0",
-    "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-plugin-import": "^2.21.1",
-    "file-loader": "^6.0.0",
-    "nodemon": "^2.0.4",
-    "prettier": "2.0.5",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
-    "ts-node": "^8.10.2",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2"
-  },
-  "license": "MIT",
-  "main": ".webpack/main/bundle.js",
-  "name": "hello-electron",
-  "scripts": {
-    "build": "electron-builder build",
-    "bundle": "webpack",
-    "bundle-watch": "nodemon --watch webpack.config.dev.ts --exec 'webpack --watch --config webpack.config.dev.ts'",
-    "release": "electron-builder build",
-    "start": "electron ."
-  },
-  "version": "0.0.1",
-  "description": "Example application"
+    "author": {
+        "email": "myname@example.com",
+        "name": "myname"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.10.1",
+        "@material-ui/lab": "^4.0.0-alpha.55",
+        "electron-squirrel-startup": "^1.0.0",
+        "fontsource-roboto": "^2.1.3",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "rxjs": "^6.5.5"
+    },
+    "devDependencies": {
+        "@types/copy-webpack-plugin": "^6.0.0",
+        "@types/node": "^14.0.11",
+        "@types/react": "^16.9.8",
+        "@types/react-dom": "^16.9.8",
+        "@types/webpack": "^4.41.17",
+        "@types/webpack-merge": "^4.1.5",
+        "@typescript-eslint/eslint-plugin": "^3.2.0",
+        "@typescript-eslint/parser": "^3.2.0",
+        "copy-webpack-plugin": "^6.0.2",
+        "css-loader": "^3.5.3",
+        "electron": "^9.0.2",
+        "electron-builder": "^22.7.0",
+        "electron-builder-squirrel-windows": "^22.7.0",
+        "eslint": "^7.2.0",
+        "eslint-import-resolver-webpack": "^0.12.1",
+        "eslint-plugin-import": "^2.21.1",
+        "eslint-plugin-react": "^7.20.0",
+        "file-loader": "^6.0.0",
+        "nodemon": "^2.0.4",
+        "style-loader": "^1.2.1",
+        "ts-loader": "^7.0.5",
+        "ts-node": "^8.10.2",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
+        "typescript": "^3.9.5",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-merge": "^4.2.2"
+    },
+    "license": "MIT",
+    "main": ".webpack/main/bundle.js",
+    "name": "hello-electron",
+    "scripts": {
+        "build": "electron-builder build",
+        "bundle": "webpack",
+        "bundle-watch": "nodemon --watch webpack.config.dev.ts --exec 'webpack --watch --config webpack.config.dev.ts'",
+        "release": "electron-builder build",
+        "start": "electron .",
+        "fix": "eslint --fix src",
+        "lint": "eslint src"
+    },
+    "version": "0.0.1",
+    "description": "Example application"
 }
