--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,9 +3,12 @@ env:
   es6: true
   node: true
 extends:
-  - "eslint:recommended"
+  # - "eslint:recommended"
   - "plugin:@typescript-eslint/eslint-recommended"
   - "plugin:@typescript-eslint/recommended"
+  - "plugin:react/recommended"
+  # - "prettier/@typescript-eslint"
+  # - "plugin:prettier/recommended"
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
@@ -29,6 +32,8 @@ settings:
   import/resolver:
     node:
     webpack:
-      config: 
+      config:
         - "webpack.config.dev.ts"
         - "webpack.config.prod.ts"
+  react:
+    version: detect
