--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
         "webpack-merge": "^4.2.2"
     },
     "license": "MIT",
-    "main": ".webpack/main/bundle.js",
+    "main": ".webpack.prod/main/bundle.js",
     "name": "hello-electron",
     "scripts": {
         "build": "electron-builder build",
         "bundle": "webpack",
-        "bundle-watch": "nodemon --watch webpack.config.dev.ts --exec 'webpack --watch --config webpack.config.dev.ts'",
+        "bundle-watch": "nodemon --watch webpack.config.dev.ts --watch webpack.config.common.ts --exec 'webpack --watch --config webpack.config.dev.ts'",
         "release": "electron-builder build",
         "start": "electron .",
         "fix": "eslint --fix src",
