rename icon name to avoid 0x0 problem

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,7 +3,7 @@ directories:
 files:
   - '!**/*'
   - .webpack.prod/**/*
-icon: .webpack.prod/main/icons/icon
+icon: .webpack.prod/main/icons
 linux:
   category: Utility
   publish:
