--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
         "tsconfig-paths-webpack-plugin": "^3.2.0",
         "typescript": "^3.9.5",
         "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-merge": "^4.2.2"
+        "webpack-cli": "^3.3.11"
     },
     "license": "MIT",
     "main": ".webpack.prod/main/bundle.js",
