--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,12 +3,10 @@ env:
   es6: true
   node: true
 extends:
-  # - "eslint:recommended"
-  - "plugin:@typescript-eslint/eslint-recommended"
+  - "eslint:recommended"
+  # - "plugin:@typescript-eslint/eslint-recommended"
   - "plugin:@typescript-eslint/recommended"
   - "plugin:react/recommended"
-  # - "prettier/@typescript-eslint"
-  # - "plugin:prettier/recommended"
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
