--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "eslint": "^7.2.0",
         "eslint-import-resolver-webpack": "^0.12.1",
         "eslint-plugin-import": "^2.21.1",
+        "eslint-plugin-only-warn": "^1.0.2",
         "eslint-plugin-react": "^7.20.0",
         "file-loader": "^6.0.0",
         "nodemon": "^2.0.4",
