--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.10.1",
+        "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.55",
+        "@rjsf/core": "^2.0.2",
+        "@rjsf/material-ui": "^2.0.2",
         "electron-squirrel-startup": "^1.0.0",
-        "fontsource-roboto": "^2.1.3",
+        "electron-store": "^5.2.0",
+        "fontsource-roboto": "^3.0.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "rxjs": "^6.5.5"
+        "rxjs": "^6.5.5",
+        "tabbouleh": "^1.0.2"
     },
     "devDependencies": {
         "@types/copy-webpack-plugin": "^6.0.0",
@@ -22,7 +27,7 @@
         "@typescript-eslint/eslint-plugin": "^3.2.0",
         "@typescript-eslint/parser": "^3.2.0",
         "copy-webpack-plugin": "^6.0.2",
-        "css-loader": "^3.5.3",
+        "css-loader": "^4.2.1",
         "electron": "^9.0.2",
         "electron-builder": "^22.7.0",
         "electron-builder-squirrel-windows": "^22.7.0",
@@ -34,10 +39,10 @@
         "file-loader": "^6.0.0",
         "nodemon": "^2.0.4",
         "style-loader": "^1.2.1",
-        "ts-loader": "^7.0.5",
+        "ts-loader": "^8.0.2",
         "ts-node": "^8.10.2",
         "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "typescript": "^3.9.5",
+        "typescript": "^4.0.2",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11"
     },
@@ -54,5 +59,8 @@
         "lint": "eslint src"
     },
     "version": "0.0.1",
-    "description": "Example application"
+    "description": "Example application",
+    "resolutions": {
+        "ajv": "6.12.2"
+    }
 }
