--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         "jsx": "react",
         /* Basic Options */
         // "incremental": true,                   /* Enable incremental compilation */
