--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
         "@material-ui/lab": "^4.0.0-alpha.55",
         "@rjsf/core": "^2.0.2",
         "@rjsf/material-ui": "^2.0.2",
+        "ajv": "6.12.4",
         "electron-squirrel-startup": "^1.0.0",
-        "electron-store": "^5.2.0",
+        "electron-store": "^6.0.0",
         "fontsource-roboto": "^3.0.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -40,7 +41,7 @@
         "nodemon": "^2.0.4",
         "style-loader": "^1.2.1",
         "ts-loader": "^8.0.2",
-        "ts-node": "^8.10.2",
+        "ts-node": "^9.0.0",
         "tsconfig-paths-webpack-plugin": "^3.2.0",
         "typescript": "^4.0.2",
         "webpack": "^4.43.0",
