--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,7 +4,7 @@ env:
   node: true
 extends:
   - "eslint:recommended"
-  # - "plugin:@typescript-eslint/eslint-recommended"
+  - "plugin:@typescript-eslint/eslint-recommended"
   - "plugin:@typescript-eslint/recommended"
   - "plugin:react/recommended"
 globals:
